--- a/index.ipynb
+++ b/index.ipynb
@@ -255,7 +255,7 @@
     }
    ],
    "source": [
-    "\n",
+    "pip ins\n",
     "import folium\n",
     "buenos_map = folium.Map([ba_latitude, ba_longitude])\n",
     "buenos_map"
