Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -250,7 +250,7 @@
     }
    ],
    "source": [
-    "pip install --upgrade pip\n",
+    "'pip install --upgrade pip''\n",
     "import folium\n",
     "buenos_map = folium.Map([ba_latitude, ba_longitude])\n",
     "buenos_map"
