--- a/index.ipynb
+++ b/index.ipynb
@@ -452,8 +452,7 @@
     }
    ],
    "source": [
-    "la_boca_marker = [-34.6345, -58.3631]\n",
-    "la_boca_marker"
+    "la_boca_marker = marker_"
    ]
   },
   {
