Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -532,11 +532,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = None"
+    "recoleta_marker = marker_two"
    ]
   },
   {
